--- a/families/index.html
+++ b/families/index.html
@@ -18,6 +18,7 @@
         <div class="gutter-right logo">
             <a href="../families" >See all families</a>
             <a href="../create" >Add a bunny</a>
+            <a href="../new-family">Add a new family</a>
         </div>
     </header>    
     <button id="logout">Logout</button>
